ensure browser scrollbars are hidden

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,4 @@
-body { margin: 0; }
+body { margin: 0; overflow: hidden; }
 .status {
 	background-color: #000;
 	border: 0;
